--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dialoguer = "0.11.0"
+indicatif = { version = "0.17.7", features = ["rayon"] }
 itertools = "0.11.0"
 rayon = "1.8.0"
 serde = "1.0.183"
