--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.6", features = ["derive"] }
 dialoguer = "0.11.0"
 indicatif = { version = "0.17.7", features = ["rayon"] }
 itertools = "0.11.0"
