--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ciborium = "0.2.1"
 clap = { version = "4.4.6", features = ["derive"] }
 dialoguer = "0.11.0"
 indicatif = { version = "0.17.7", features = ["rayon"] }
 itertools = "0.11.0"
+phf = "0.11.2"
 rayon = "1.8.0"
 serde = "1.0.183"
 serde_json = "1.0.104"
+
+[build-dependencies]
+phf = { version = "0.11.1", default-features = false }
+phf_codegen = "0.11.1"
+serde = "1.0.183"
+ciborium = "0.2.1"
 
 [profile.release]
 debug = true
